--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>GIT ONE</h1>
+    <article>
+        <h2>Really learn Git and Github</h2>
+
+    </article>
 </body>
 </html>
